--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -115,7 +115,7 @@ body {
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   }
   #add-slider-grains.opened, #add-slider-meats.opened, #add-slider-dairy.opened, #add-slider-fruits.opened, #add-slider-vegetables.opened{
-    max-height:250px;
+    max-height:300px;
     overflow: hidden;
     transition-property: all;
     transition-duration: 0.5s;
@@ -146,10 +146,10 @@ input {
 }
 ::placeholder {
     color: rgba(96, 96, 194, 0.432);
+    margin: 0;
+    padding: 0;
 }
-.autocomplete {
-    height: 50px;
-}
+
 .form-group {
     margin-top: 5%;
     margin-left: 5%;
@@ -157,31 +157,40 @@ input {
     max-height: 50px;
     padding-bottom: 0px;
 }
+.autocomplete {
+    margin-top: 1%;
+}
 .input-label {
+    position: relative;
+    top: 20px;
     margin: 0;
-    padding-left: 8%;
     color: white;
     font-weight: normal;
 }
 .input-icon {
     position: relative;
-    display: inline-block;
-    transform: scale(.85);
-    border-right: 0px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    background-color: #f79178;
+    transform: scale(1.9);
+    top: 25px;
+    left: 15px;
+    color: #8181819f;
+    text-shadow: 1px 1px 1px #ccc;
+    font-size: 1.5em;
+
      /*to remove space between this and the input*/
 }
 input[type=text] {
-    width: calc(90%);
+    width: 100%;
     border: 1px solid #81818196;
-    padding: 1%;
-    margin-left: 1%;
+    padding: 1.5%;
+    padding-left: 57px;
     border-radius: 5px;
     color: rgb(96, 96, 194);
 }
-    ::-webkit-datetime-edit { padding-left: 5px; }
+input[type=text]:focus {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+    ::-webkit-datetime-edit { padding-left: 57px; }
     ::-webkit-datetime-edit-text { color: rgb(96, 96, 194); padding: 0 0.3em; }
     ::-webkit-datetime-edit-month-field { color: rgb(96, 96, 194); }
     ::-webkit-datetime-edit-day-field { color: rgb(96, 96, 194); }
@@ -190,34 +199,46 @@ input[type=text] {
     ::-webkit-calendar-picker-indicator { background: #f1f1f1; }
 
     input[type=date] {
-    margin-left: 1%;
-    width: calc(90%);
+    width: 100%;
     border: 1px solid #8181819f;
     padding: 0%;
     border-radius: 5px;
-    color: rgb(96, 96, 194);
+    color: rgb(52, 52, 143);
 }
 input[type=submit] {
     margin: 0 5%;
+    margin-top: 3%;
     padding: 3%;
     width: 90%;
     border: none;
-    border-radius: 5px solid rgb(154, 154, 155);
-    color: white;
-    background-color: rgb(154, 154, 155);
+    border-radius: 5px;
+    color: rgb(236, 227, 227);
+    background-color: #969393;
 }
+input[type=submit]:hover, input[type=submit]:active {
+    filter: drop-shadow(0px 0px 3px rgb(150, 144, 144));
+    border-radius: 5px;
+    color: white;
+    background-color: #a19f9f;
+}
+
 .autocomplete-items {
     position: absolute;
     z-index: 99;
     /*position the autocomplete items to be the same width as the container:*/
+    width: 90%;
     color: rgb(96, 96, 194);
+    filter: drop-shadow(0px 0px 2px rgb(150, 144, 144));
   }
   .autocomplete-items div {
-    padding: 0.5%;
-    padding-left: 1%;
+    padding: 1%;
+    padding-left: 4%;
     cursor: pointer;
     background-color: #fff; 
     border-bottom: 1px solid #d4d4d4; 
+  }
+  .autocomplete-items div i {
+      margin-right: 5%;
   }
   .autocomplete-items div:hover {
     background-color: #e9e9e9; 
@@ -227,9 +248,7 @@ input[type=submit] {
     color: #ffffff; 
   }
   .food-suggestions {
-      width: 90%;
-      margin: 0 auto;
-      border-radius: 5px;
+      width: 100%;
   }
 
 /********************************************
@@ -437,10 +456,9 @@ input[type=submit] {
             opacity: 0;
         }
         
-          .override-position {
-              position:absolute;
-              top: 154px;
-          }
+        .override-position {
+            top: 192px;
+        }
 }  
 /********************************************
 *                                           *
@@ -449,7 +467,7 @@ input[type=submit] {
 ********************************************/
 @media only screen 
     and (min-width: 320px)
-    /*and (max-device-height: 568px)*/
+    and (max-device-height: 568px)
     and (-webkit-device-pixel-ratio : 2) {
         html {
             background: url("../images/Fridge_iPhone5SE.png") no-repeat center center /*fixed*/;
@@ -649,7 +667,7 @@ input[type=submit] {
         
           .override-position {
               position:absolute;
-              top: 154px;
+              top: 192px;
           }
 }  
 /********************************************
@@ -1076,7 +1094,7 @@ input[type=submit] {
         
           .override-position {
               position:absolute;
-              top: 156px;
+              top: 194px;
           }
 }
 /********************************************
@@ -1290,7 +1308,7 @@ input[type=submit] {
     
       .override-position {
           position:absolute;
-          top: 156px;
+          top: 194px;
       }
 }
 
@@ -1501,7 +1519,7 @@ input[type=submit] {
 
   .override-position {
       position:absolute;
-      top: 158px;
+      top: 195px;
   }
 }
 /********************************************
@@ -1570,7 +1588,6 @@ input[type=submit] {
   .modal-header-meats {
       color:#fff;
       padding:9px 15px;
-      border-bottom:1px dotted #eee;
       background-color: #f79178;
       -webkit-border-top-left-radius: 5px;
       -webkit-border-top-right-radius: 5px;
@@ -1913,13 +1930,8 @@ input[type=submit] {
       filter: brightness(1.2);
       transition: color 2s;
     }
-  
     .override-position {
-        width: 89.5%;
         top: 204px;
-        margin-left: 3%;
-
     }
-  }
-
-
+}
+  
